[tool.poetry]
name = "async-projects"
version = "0.1.0"
description = ""
authors = ["Lara <dmilarisa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.1"
websockets = "^12.0"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
